# reacton-redux

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/reacton_redux/: __init__.py  combine_reducers.py  create_store.py
src/reacton_redux/reacton/: __init__.py  reacton.py
src/reacton_redux/toolkit/: create_action.py  create_reducer.py  immer.py
src/reacton_redux/types/: actions.py  middleware.py  reducers.py  store.py
tests/: test_create_store.py
