[tool.poetry]
name = "reacton-redux"
version = "0.1.0"
description = ""
authors = ["Egor Makarenko <egormkn@yandex.ru>"]
readme = "README.md"
packages = [{include = "reacton_redux", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
